# switchbot-webctl

./: .gitignore  ctl.py  pyproject.toml
backend/: ctl.py  server.py
backend/modules/: control.py  device.py
frontend/public/: index.html
frontend/src/: App.js
frontend/src/modules/: controller.js
